--- a/backend-v2/requirements.txt
+++ b/backend-v2/requirements.txt
@@ -1,9 +1,12 @@
-Flask==2.2.3
-Flask-SQLAlchemy==3.0.3
-Flask-Migrate==4.0.4
-Flask-JWT-Extended==4.4.4
+Flask==3.0.1
+Flask-Cors==4.0.1
+Flask-JWT-Extended==4.4.0
+Flask-SQLAlchemy==2.5.1
+Flask-Migrate==3.1.0
 Flask-Bcrypt==1.0.1
-Flask-Cors==3.0.10
-python-dotenv==1.0.0
-mysqlclient==2.1.1
-pytest==7.3.1
+Flask-RESTful==0.3.9
+marshmallow==3.14.1
+marshmallow-sqlalchemy==0.26.1
+python-dotenv==0.20.0
+pymysql==1.0.2
+
