--- a/backend-v3/app/.env
+++ b/backend-v3/app/.env
@@ -1,3 +1,7 @@
-SECRET_KEY=your_secret_key_here
-DATABASE_URL=sqlite:///site.db
-JWT_SECRET_KEY=your_jwt_secret_key_here
+DB_HOST=sql10.freemysqlhosting.net
+DB_NAME=sql10721737
+DB_USER=sql10721737
+DB_PASS=2ZaDJRTfjt
+PORT=3306
+SECRET_KEY=your_secret_key
+JWT_SECRET_KEY=your_jwt_secret_key
